Work on process adaptor
TODO Notes for some of the things that still need to be done
Add IRunningNodeContext, so we can get the current active name of the node instead of passing it at init time and have a race condition.
Rename some classes s/App/Stitch/

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -64,19 +64,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modules\Stitches\Adaptors\AppDomainAppAdaptor.cs" />
     <Compile Include="Modules\Stitches\StitchFileSystem.cs" />
     <Compile Include="Modules\Stitches\StitchResourceUsage.cs" />
     <Compile Include="Modules\Stitches\StitchesConfiguration.cs" />
     <Compile Include="Modules\Stitches\StitchesdataStorage.cs" />
     <Compile Include="Modules\Stitches\StitchesModule.cs" />
-    <Compile Include="Modules\Stitches\StitchStartedEventArgs.cs" />
+    <Compile Include="Modules\Stitches\StitchProcessEventArgs.cs" />
     <Compile Include="Modules\Stitches\Versions\DateTimeVersionManager.cs" />
     <Compile Include="Modules\Stitches\Versions\IVersionManager.cs" />
     <Compile Include="Modules\Stitches\Messages\AppInstanceEvent.cs" />
-    <Compile Include="Modules\Stitches\Adaptors\IAppAdaptor.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\IStitchAdaptor.cs" />
     <Compile Include="Modules\Stitches\InstanceActionResult.cs" />
-    <Compile Include="Modules\Stitches\Adaptors\InstanceAdaptorFactory.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\StitchAdaptorFactory.cs" />
     <Compile Include="Modules\Stitches\InstanceManager.cs" />
     <Compile Include="Modules\Stitches\Messages\InstanceCreateRequest.cs" />
     <Compile Include="Modules\Stitches\Messages\InstanceInformation.cs" />
