--- a/Tests/HttpTest/HttpTest.csproj
+++ b/Tests/HttpTest/HttpTest.csproj
@@ -74,6 +74,10 @@
       <Project>{1abdc1b3-7213-44a7-a4ae-0ab40606c827}</Project>
       <Name>CrossStitch.Http.NancyFx</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Src\CrossStitch.Stitch\CrossStitch.Stitch.csproj">
+      <Project>{4BD40E13-2F9A-41C9-AED4-DC160B3D48A6}</Project>
+      <Name>CrossStitch.Stitch</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
