--- a/Tests/StitchStart.Client/StitchStart.Client.csproj
+++ b/Tests/StitchStart.Client/StitchStart.Client.csproj
@@ -50,7 +50,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\CrossStitch\Src\CrossStitch.Stitch\CrossStitch.Stitch.csproj">
+    <ProjectReference Include="..\..\Src\CrossStitch.Stitch\CrossStitch.Stitch.csproj">
       <Project>{4bd40e13-2f9a-41c9-aed4-dc160b3d48a6}</Project>
       <Name>CrossStitch.Stitch</Name>
     </ProjectReference>
