Fixes so StitchStart test programs work for basic test cases
Add an In-memory data storage option, so we don't have to allocate a dir for test programs and worry about persistance across restarts.
ToStitchMessageReader doesn't use a cancellable stream, so we remove cancel/timeout logic.
Cleanup StitchInstance entity to remove unused properties
Move some classes down into CrossStitch.Stitch
Misc cleanup and TODO notes

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\InMemoryDataStorage.cs" />
     <Compile Include="Modules\Stitches\StitchFileSystem.cs" />
     <Compile Include="Modules\Stitches\StitchResourceUsage.cs" />
     <Compile Include="Modules\Stitches\StitchesConfiguration.cs" />
@@ -94,8 +95,6 @@
     <Compile Include="Data\IDataEntity.cs" />
     <Compile Include="Data\IDataStorage.cs" />
     <Compile Include="Data\Messages\DataRequest.cs" />
-    <Compile Include="Events\EventHandlerExtensions.cs" />
-    <Compile Include="Events\PayloadEventArgs.cs" />
     <Compile Include="MessageBus\MessageBusExtensions.cs" />
     <Compile Include="Modules\Http\HttpConfiguration.cs" />
     <Compile Include="Logging\Events\LogEvent.cs" />
