Rework Stitch<->Core communications to be fully bi-directional and asynchronous
Messages from the stitch are read in a separate thread and passed up to the messagebus via events
Messages from the Core are read in a separate thread and passed out using a BlockingCollection
Allow the stitch to send un-requested messages such as data and logs.
Logs are supported and are passed to the LoggingModule. Data events are noop for now
Change the StitchMessageManager to have a better API and not require a processor/callback. Example in StitchStart test program
Have a thread to check the status of the Core process PID and close the Stitch application when the core dies.
Misc cleanups and fixes, TODO notes.

--- a/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -48,7 +48,14 @@
     <Compile Include="Events\PayloadEventArgs.cs" />
     <Compile Include="IRunningNodeContext.cs" />
     <Compile Include="V1\Core\CoreMessageManager.cs" />
+    <Compile Include="V1\Core\CoreStitchContext.cs" />
     <Compile Include="V1\Core\FromStitchMessageReader.cs" />
+    <Compile Include="V1\Core\FromStitchMessageReceivedEventArgs.cs" />
+    <Compile Include="V1\Core\FromStitchReaderThread.cs" />
+    <Compile Include="V1\Core\HeartbeatSyncReceivedEventArgs.cs" />
+    <Compile Include="V1\Core\LogsReceivedEventArgs.cs" />
+    <Compile Include="V1\Core\RequestResponseReceivedEventArgs.cs" />
+    <Compile Include="V1\Core\StitchProcessEventArgs.cs" />
     <Compile Include="V1\Stitch\HeartbeatReceivedEventArgs.cs" />
     <Compile Include="V1\Stitch\StitchMessageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
