--- a/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.csproj
+++ b/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CrossStitch.Core\CrossStitch.Core.csproj">
