--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -128,6 +128,10 @@
     <Compile Include="Utility\Serialization\JsonSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Modules\Data\README.md" />
+    <None Include="Modules\Logging\README.md" />
+    <None Include="Modules\Stitches\README.md" />
+    <None Include="Modules\Timer\README.md" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
