start adding TODO notes to the Master module and a README with overview of what this module wants to be.

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <None Include="Modules\Data\README.md" />
     <None Include="Modules\Logging\README.md" />
+    <None Include="Modules\Master\README.md" />
     <None Include="Modules\Stitches\README.md" />
     <None Include="Modules\Timer\README.md" />
     <None Include="packages.config" />
