Misc cleanups, reorgs, TODO notes

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -106,18 +106,18 @@
     <Compile Include="Modules\Master\Events\NodeRemovedFromCluster.cs" />
     <Compile Include="Modules\Master\IClusterNodeManager.cs" />
     <Compile Include="Messages\GenericResponse.cs" />
-    <Compile Include="Node\ApplicationCoordinatorModule.cs" />
+    <Compile Include="Modules\RequestCoordinator\RequestCoordinatorModule.cs" />
     <Compile Include="MessageBus\DataHelperClient.cs" />
-    <Compile Include="Node\Messages\ApplicationMessage.cs" />
-    <Compile Include="Node\Messages\ComponentChangeRequest.cs" />
+    <Compile Include="Messages\CoordinatedRequests\ApplicationMessage.cs" />
+    <Compile Include="Messages\CoordinatedRequests\ComponentChangeRequest.cs" />
     <Compile Include="Modules\Timer\MessageTimerModule.cs" />
     <Compile Include="Modules\IModule.cs" />
     <Compile Include="Monitoring\Events\ObservationEvent.cs" />
-    <Compile Include="Node\Messages\CoreEvent.cs" />
-    <Compile Include="Node\Messages\NodeStatus.cs" />
-    <Compile Include="Node\Messages\NodeStatusRequest.cs" />
-    <Compile Include="Node\NodeConfiguration.cs" />
-    <Compile Include="Node\CrossStitchCore.cs" />
+    <Compile Include="Messages\CoreEvent.cs" />
+    <Compile Include="Messages\NodeStatus.cs" />
+    <Compile Include="Messages\CoordinatedRequests\NodeStatusRequest.cs" />
+    <Compile Include="NodeConfiguration.cs" />
+    <Compile Include="CrossStitchCore.cs" />
     <Compile Include="Modules\Master\MasterConfiguration.cs" />
     <Compile Include="Modules\Master\MasterModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -132,6 +132,7 @@
     <None Include="Modules\Data\README.md" />
     <None Include="Modules\Logging\README.md" />
     <None Include="Modules\Master\README.md" />
+    <None Include="Modules\RequestCoordinator\README.md" />
     <None Include="Modules\Stitches\README.md" />
     <None Include="Modules\Timer\README.md" />
     <None Include="packages.config" />
