--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Messages\Backplane\ClusterMemberEvent.cs" />
     <Compile Include="Messages\Backplane\ZoneMemberEvent.cs" />
     <Compile Include="Messages\Stitches\InstanceRequest.cs" />
+    <Compile Include="Messages\StitchMonitor\StitchHealthRequest.cs" />
     <Compile Include="Models\NodeCommunicationInformation.cs" />
     <Compile Include="ModuleCollection.cs" />
     <Compile Include="Modules\Data\DataCache.cs" />
