--- a/Src/CrossStitch.Backplane.Zyre/app.config
+++ b/Src/CrossStitch.Backplane.Zyre/app.config
@@ -6,6 +6,10 @@
         <assemblyIdentity name="AsyncIO" publicKeyToken="44a94435bd6f33f8" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.1.18.0" newVersion="0.1.18.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NetMQ" publicKeyToken="a6decef4ddc58b3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.1" newVersion="4.0.0.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
