--- a/Src/CrossStitch.Backplane.Zyre/packages.config
+++ b/Src/CrossStitch.Backplane.Zyre/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Acquaintance" version="1.0.0-rc1" targetFramework="net452" requireReinstallation="true" />
-  <package id="AsyncIO" version="0.1.18.0" targetFramework="net452" />
-  <package id="NetMQ" version="4.0.0.0-beta" targetFramework="net452" />
+  <package id="AsyncIO" version="0.1.26.0" targetFramework="net462" />
+  <package id="NetMQ" version="4.0.0.1" targetFramework="net462" />
   <package id="NetMQ.Zyre" version="1.0.0-rc1" targetFramework="net452" />
 </packages>
