--- a/Tests/ClusterTest.Client/App.config
+++ b/Tests/ClusterTest.Client/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
@@ -9,6 +14,23 @@
         <assemblyIdentity name="AsyncIO" publicKeyToken="44a94435bd6f33f8" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.1.25.0" newVersion="0.1.25.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NetMQ" publicKeyToken="a6decef4ddc58b3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.1" newVersion="4.0.0.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Simple.ConsoleOutLoggerFactoryAdapter, Common.Logging">
+        <arg key="level" value="DEBUG" />
+        <arg key="showLevel" value="true" />
+        <arg key="showLogName" value="false" />
+        <arg key="showDateTime" value="true" />
+        <arg key="useColor" value="true"/>
+        <!-- This doesn't seem to work -->
+        <arg key="dateTimeFormat" value="HH:mm:ss:fff" />
+      </factoryAdapter>
+    </logging>
+  </common>
 </configuration>
