--- a/Tests/ClusterTest.Master/packages.config
+++ b/Tests/ClusterTest.Master/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Acquaintance" version="1.0.0-rc1" targetFramework="net461" />
+  <package id="Acquaintance" version="1.0.0-rc1" targetFramework="net462" />
+  <package id="AsyncIO" version="0.1.26.0" targetFramework="net462" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net462" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net462" />
+  <package id="NetMQ" version="4.0.0.1" targetFramework="net462" />
+  <package id="NetMQ.Zyre" version="1.0.0-rc1" targetFramework="net462" />
 </packages>
