Backplane fixes and cleanups
Envelope building rework, and fix MessageHeader to contain network IDs and nodeIDs
Misc backplane fixes.

--- a/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.csproj
+++ b/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.csproj
@@ -61,18 +61,12 @@
     <Compile Include="BackplaneConfiguration.cs" />
     <Compile Include="BackplaneModule.cs" />
     <Compile Include="IClusterBackplane.cs" />
-    <Compile Include="Networking\INetwork.cs" />
-    <Compile Include="Networking\IReceiveChannel.cs" />
-    <Compile Include="Networking\ISendChannel.cs" />
+    <Compile Include="MessageHeaderExtensions.cs" />
     <Compile Include="Networking\MessageEnvelope.cs" />
     <Compile Include="Networking\MessageHeader.cs" />
     <Compile Include="Networking\MessagePayloadType.cs" />
     <Compile Include="Networking\MessageReceivedEventArgs.cs" />
-    <Compile Include="Networking\NetMq\MultiReceiveChannel.cs" />
     <Compile Include="Networking\NetMq\NetMqMessageMapper.cs" />
-    <Compile Include="Networking\NetMq\Network.cs" />
-    <Compile Include="Networking\NetMq\SendChannel.cs" />
-    <Compile Include="Networking\NetMq\SingleReceiveChannel.cs" />
     <Compile Include="Networking\TargetType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZyreBackplane.cs" />
