--- a/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.csproj
+++ b/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackplaneConfiguration.cs" />
+    <Compile Include="BackplaneContext.cs" />
     <Compile Include="BackplaneModule.cs" />
     <Compile Include="IClusterBackplane.cs" />
     <Compile Include="MessageHeaderExtensions.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Networking\TargetType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZyreBackplane.cs" />
+    <Compile Include="ZyreBackplaneFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
