[Backplane,Master] Cleanup TargetType to only worry about backplane addressing
Sending messages to application/version/instance will be done through the master node to translate into networkNodeId/Zone and sends
Introduce the idea of the _all zone, which allnodes will be part of.
TODO notes.

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Modules\Data\InMemory\InMemoryDataStorage.cs" />
     <Compile Include="Modules\Logging\LoggingModule.cs" />
     <Compile Include="MessageBus\ModuleLog.cs" />
+    <Compile Include="Modules\Master\Zones.cs" />
     <Compile Include="Modules\ModuleNames.cs" />
     <Compile Include="Modules\Stitches\StitchFileSystem.cs" />
     <Compile Include="Modules\Stitches\StitchResourceUsage.cs" />
